# interpylate

./: .gitignore  .pypirc  LICENSE  MANIFEST.in  NLinearRegularGridInterpolator.py  README.md  README.rst  pyproject.toml  setup.cgf  setup.py
doc/: NLinearRegularGridInterpolator.html  index.html  search.js
docs/: Makefile  index.html  interpylate.html  make_txt.py  search.js
docs/api_txt/: doc.txt  interpylate.BiLinearRegularGridInterpolator.txt  interpylate.LinearRegularGridInterpolator.txt  interpylate.NLinearRegularGridInterpolator.txt  interpylate.NLinearRegularGridInterpolatorLarge.txt  interpylate.TriLinearRegularGridInterpolator.txt  interpylate.txt
docs/interpylate/: BiLinearRegularGridInterpolator.html  LinearRegularGridInterpolator.html  NLinearRegularGridInterpolator.html  NLinearRegularGridInterpolatorLarge.html  TriLinearRegularGridInterpolator.html
examples/: one_dimension.py  three_dimensions.py  two_dimensions.py
exemples/: one_dimension.py  speed_contest.py  three_dimensions.py
interpylate/: BiLinearRegularGridInterpolator.py  LinearRegularGridInterpolator.py  NLinearRegularGridInterpolator.py  NLinearRegularGridInterpolatorLarge.py  TriLinearRegularGridInterpolator.py  __init__.py
interpylate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: NLinearRegularGridInterpolator.py  TriLinearRegularGridInterpolator.py
src/interpylate/: BiLinearRegularGridInterpolator.py  LinearRegularGridInterpolator.py  NLinearRegularGridInterpolator.py  NLinearRegularGridInterpolatorLarge.py  TriLinearRegularGridInterpolator.py  __init__.py
